# alcaparra-lsp

./: Cargo.toml  README.md
scripts/: build-release.sh
src/: analysis.rs  backend.rs  callhier.rs  catalog.rs  codelens.rs  completion.rs  docblock.rs  formatting.rs  hover.rs  inlay.rs  links.rs  main.rs  project_config.rs  scope.rs  semantic.rs  signature.rs  symbols.rs  util.rs  workspace.rs  wsymbols.rs
